# frugal-tweak

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.include  Packages.mdproj  autogen.sh  configure  configure.ac  frugal-mono-tools.sln  frugal-mono-tools.userprefs  frugal-tweak.desktop  frugal-tweak.sln  frugalware-tweak.sln
PyUtils/: PyFrugalTweakService.py  PyUtils.mdproj  irc.py
RSS.NET/: ChangeLog  Makefile  Makefile.am  RSS.NET.csproj  rss.net.pc.in
Service/: Main.cs  Service.csproj
Traduction/: ChangeLog  Traduction.mdproj  fr.po  hu.po  messages.po
WebService/: WebService.csproj  webservice.pc.in
deprecated/: ChangeLog  Create_archive.sh  frugalware-tweak.sln
frugal-irc/: ChangeLog  IconSummaryBody.cs  Main.cs  MainWindow.cs  Makefile.am  frugal-irc.csproj  frugalware-irc.in
frugal-mono-tools/: ChangeLog  ConfSystem.cs  Configuration.cs  Crypto.cs  DbusObject.cs  Debug.cs  DiagGrub.cs  FEN_Debug.cs  Fen_Menu.cs  FrugalNote.cs  Group.cs  Groups.cs  Grub.cs  IconSummaryBody.cs  Main.cs  MainWindow.cs  Makefile  Makefile.am  MessageBox.cs  PacmanG2.cs  Service.cs  Services.cs  Systemd.cs  TODO  Update.cs  User.cs  VteConsole.cs  WID_About.cs  WID_Config.cs  WID_DateTime.cs  WID_Grub.cs  WID_Hardware.cs  WID_LoginManager.cs  WID_Logs.cs  WID_Network.cs  WID_News.cs  WID_Notes.cs  WID_Pkg.cs  (+14 more)
py-pacman/pyfpm/src/: Makefile.am  pyfpm-configuration.py  pyfpm-configuration.ui  pyfpm.py  pyfpm.ui  pyfpminstall.py  pyfpminstall.ui  pyfun.py  pyfun.ui  splash.ui
py-pacman/pyfpm/src/tools/: README
py-pacman/pyfpm/src/tools/pyfpmtools/: tools.py
(+221 files in other folders)
